# memory-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FILTERING_GUIDE.md  GRAPH_MEMORY.md  LICENSE  MIGRATION_SUMMARY.md  PROJECT_STATUS.md  README.md  TODO.md
docs/: ADVANCED_FEATURES.md  CHANGELOG.md  FILES.md  GETTING_STARTED.md  INDEX.md  LLM_PROVIDERS.md  PHASE_10_SUMMARY.md  PHASE_11_SUMMARY.md  PHASE_12_SUMMARY.md  PHASE_7_SUMMARY.md  PHASE_8_SUMMARY.md  PHASE_9_SUMMARY.md  STORAGE_BACKENDS.md  index.html
src/: config.rs  error.rs  lib.rs  utils.rs
src/distributed/: mod.rs
src/embeddings/: cache.rs  default.rs  local.rs  mod.rs
src/filtering/: mod.rs
src/graph/: mod.rs  neo4j.rs
src/llm/: claude.rs  mod.rs  openai.rs  prompts.rs  watsonx.rs
src/mcp/: mod.rs
src/memory/: batch.rs  dedup.rs  main.rs  mod.rs
src/vector_store/: backends.rs  mod.rs  pinecone.rs  qdrant.rs  weaviate.rs
