[package]
name = "memory-rs"
version = "0.1.0"
edition = "2024"
description = "Long-term memory for AI Agents - Rust implementation with MCP support"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
anyrepair = "0.1"
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }
tokio-rusqlite = "0.5"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.9", features = ["server", "transport-io", "schemars"] }
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "memory-mcp"
path = "src/bin/mcp_server.rs"

[[bin]]
name = "memory-cli"
path = "src/bin/cli.rs"

[dev-dependencies]
insta = { version = "1.40", features = ["json"] }
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
